--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <name>jsoup</name>
+  <name>xsoup</name>
 
-  <groupId>org.jsoup</groupId>
-  <artifactId>jsoup</artifactId>
+  <groupId>com.javamonday.xsoup</groupId>
+  <artifactId>xsoup</artifactId>
   <version>1.7.3-SNAPSHOT</version>
-  <description>jsoup HTML parser</description>
-  <url>http://jsoup.org/</url>
+  <description>xsoup HTML parser</description>
+  <url>http://xsoup.org/</url>
   <inceptionYear>2009</inceptionYear>
   <issueManagement>
   	<system>GitHub</system>
@@ -21,13 +21,13 @@
   	</license>  
   </licenses>
   <scm>
-  	<url>http://github.com/jhy/jsoup</url>
-    <connection>scm:git:http://github.com/jhy/jsoup.git</connection>
+  	<url>https://github.com/JavaMonday/xsoup</url>
+    <connection>scm:git:hhttps://github.com/JavaMonday/xsoup.git</connection>
     <!-- <developerConnection>scm:git:git@github.com:jhy/jsoup.git</developerConnection> -->
   </scm>
   <organization>
-  	<name>Jonathan Hedley</name>
-  	<url>http://jonathanhedley.com/</url>
+  	<name>Java monday</name>
+  	<url>http://www.javamonday.com/</url>
   </organization>
 
   <build>
