--- a/pom.xml
+++ b/pom.xml
@@ -16,14 +16,14 @@
   <licenses>
   	<license>
   		<name>The MIT License</name>
-  		<url>http://jsoup.com/license</url>
+  		 
   		<distribution>repo</distribution>
   	</license>  
   </licenses>
   <scm>
   	<url>https://github.com/JavaMonday/xsoup</url>
-    <connection>scm:git:hhttps://github.com/JavaMonday/xsoup.git</connection>
-    <!-- <developerConnection>scm:git:git@github.com:jhy/jsoup.git</developerConnection> -->
+    <connection>scm:git:https://github.com/JavaMonday/xsoup.git</connection>
+     
   </scm>
   <organization>
   	<name>Java monday</name>
@@ -191,6 +191,15 @@
         <role>Lead Developer</role>
       </roles>
       <timezone>+11</timezone>
+    </developer>
+    <developer>
+      <id>ngocbd</id>
+      <name>Bui Dinh Ngoc</name>
+      <email>ngocbd@javamonday.com</email>
+      <roles>
+        <role>Lead Developer</role>
+      </roles>
+      <timezone>+7</timezone>
     </developer>
   </developers>
 
